{
  "version": 4,
  "terraform_version": "1.16.1",
  "serial": 107,
  "lineage": "309d6612-2bf6-e8bc-0997-c7e227451b99",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "Test-LB",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB/frontendIPConfigurations/PublicIPAddress",
                "load_balancer_rules": [
                  "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB/loadBalancingRules/HTTPRule"
                ],
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB"
              }
            ],
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB",
            "location": "centralindia",
            "name": "App-LB",
            "resource_group_name": "Test-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_public_ip.PIP01",
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "web-backend",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_ip_configurations": [
              "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/networkInterfaces/DB-nic/ipConfigurations/internal"
            ],
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB/backendAddressPools/Webbackendpool",
            "load_balancing_rules": [
              "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB/loadBalancingRules/HTTPRule"
            ],
            "loadbalancer_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB",
            "name": "Webbackendpool"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.Test-LB",
            "azurerm_public_ip.PIP01",
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_probe",
      "name": "probe01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB/probes/http-running",
            "interval_in_seconds": 15,
            "load_balancer_rules": [
              "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB/loadBalancingRules/HTTPRule"
            ],
            "loadbalancer_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB",
            "name": "http-running",
            "number_of_probes": 2,
            "port": 80,
            "probe_threshold": 1,
            "protocol": "Tcp"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.Test-LB",
            "azurerm_public_ip.PIP01",
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_rule",
      "name": "rule01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_ids": [
              "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB/backendAddressPools/Webbackendpool"
            ],
            "backend_port": 80,
            "disable_outbound_snat": false,
            "floating_ip_enabled": false,
            "frontend_ip_configuration_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port": 80,
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB/loadBalancingRules/HTTPRule",
            "idle_timeout_in_minutes": 4,
            "load_distribution": "Default",
            "loadbalancer_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB",
            "name": "HTTPRule",
            "probe_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB/probes/http-running",
            "protocol": "Tcp",
            "tcp_reset_enabled": false
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.Test-LB",
            "azurerm_lb_backend_address_pool.web-backend",
            "azurerm_lb_probe.probe01",
            "azurerm_public_ip.PIP01",
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/networkInterfaces/Web-nic",
            "internal_domain_name_suffix": "whhllnwhexsedaotx5dolt45nd.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.5",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/WebSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "Web-nic",
            "private_ip_address": "10.0.1.5",
            "private_ip_addresses": [
              "10.0.1.5"
            ],
            "resource_group_name": "Test-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "Web-nic",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_subnet.Snet01",
            "azurerm_virtual_network.Vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/networkInterfaces/Web-nic02",
            "internal_domain_name_suffix": "whhllnwhexsedaotx5dolt45nd.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/WebSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "name": "Web-nic02",
            "private_ip_address": "10.0.1.4",
            "private_ip_addresses": [
              "10.0.1.4"
            ],
            "resource_group_name": "Test-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "Web-nic02",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_subnet.Snet01",
            "azurerm_virtual_network.Vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic03",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/networkInterfaces/App-nic",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.2.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/AppSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "70-A8-A5-29-1D-7B",
            "name": "App-nic",
            "private_ip_address": "10.0.2.4",
            "private_ip_addresses": [
              "10.0.2.4"
            ],
            "resource_group_name": "Test-rg"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "App-nic",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_subnet.Snet02",
            "azurerm_virtual_network.Vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "nic04",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accelerated_networking_enabled": false,
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/networkInterfaces/DB-nic",
            "internal_domain_name_suffix": "whhllnwhexsedaotx5dolt45nd.rx.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.0.3.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "subnet_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/DBSubnet"
              }
            ],
            "ip_forwarding_enabled": false,
            "location": "centralindia",
            "mac_address": "70-A8-A5-A8-59-A2",
            "name": "DB-nic",
            "private_ip_address": "10.0.3.4",
            "private_ip_addresses": [
              "10.0.3.4"
            ],
            "resource_group_name": "Test-rg",
            "virtual_machine_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Compute/virtualMachines/DB-VM"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "DB-nic",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_subnet.Snet03",
            "azurerm_virtual_network.Vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface_backend_address_pool_association",
      "name": "DB-VM",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_address_pool_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB/backendAddressPools/Webbackendpool",
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/networkInterfaces/DB-nic/ipConfigurations/internal|/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/loadBalancers/App-LB/backendAddressPools/Webbackendpool",
            "ip_configuration_name": "internal",
            "network_interface_id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/networkInterfaces/DB-nic"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_lb.Test-LB",
            "azurerm_lb_backend_address_pool.web-backend",
            "azurerm_network_interface.nic04",
            "azurerm_public_ip.PIP01",
            "azurerm_resource_group.rg01",
            "azurerm_subnet.Snet03",
            "azurerm_virtual_network.Vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Nsg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/networkSecurityGroups/WEBNSG",
            "location": "centralindia",
            "name": "WEBNSG",
            "resource_group_name": "Test-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [
                  "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/applicationSecurityGroups/Web-Asg"
                ],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Internet",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "Internet",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "WEBNSG",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076"
          },
          "dependencies": [
            "azurerm_application_security_group.Asg01",
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Nsg02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/networkSecurityGroups/AppNSG",
            "location": "centralindia",
            "name": "AppNSG",
            "resource_group_name": "Test-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [
                  "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/applicationSecurityGroups/App-Asg"
                ],
                "destination_port_range": "8080",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-Web-To-App",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [
                  "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/applicationSecurityGroups/Web-Asg"
                ],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "AppNSG",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076"
          },
          "dependencies": [
            "azurerm_application_security_group.Asg01",
            "azurerm_application_security_group.Asg02",
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "Nsg03",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/networkSecurityGroups/DBNSG",
            "location": "centralindia",
            "name": "DBNSG",
            "resource_group_name": "Test-rg",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [
                  "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/applicationSecurityGroups/DB-Asg"
                ],
                "destination_port_range": "1433",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-App-To-DB",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [
                  "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/applicationSecurityGroups/App-Asg"
                ],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "name": "DBNSG",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076"
          },
          "dependencies": [
            "azurerm_application_security_group.Asg02",
            "azurerm_application_security_group.Asg03",
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PIP01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "ddos_protection_mode": "VirtualNetworkInherited",
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/publicIPAddresses/PublicIPForLB",
            "idle_timeout_in_minutes": 4,
            "ip_address": "52.172.129.61",
            "ip_version": "IPv4",
            "location": "centralindia",
            "name": "PublicIPForLB",
            "resource_group_name": "Test-rg",
            "sku": "Standard",
            "sku_tier": "Regional"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "PublicIPForLB",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076"
          },
          "dependencies": [
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Snet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/WebSubnet",
            "name": "WebSubnet",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Test-rg",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "Test-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "WebSubnet",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076",
            "virtual_network_name": "Test-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_virtual_network.Vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Snet02",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/AppSubnet",
            "name": "AppSubnet",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Test-rg",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "Test-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "AppSubnet",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076",
            "virtual_network_name": "Test-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_virtual_network.Vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Snet03",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/DBSubnet",
            "name": "DBSubnet",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Test-rg",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "Test-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "DBSubnet",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076",
            "virtual_network_name": "Test-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_virtual_network.Vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Snet04",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.4.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/BastionSubnet",
            "name": "BastionSubnet",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Test-rg",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "Test-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "BastionSubnet",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076",
            "virtual_network_name": "Test-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_virtual_network.Vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "Snet05",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.5.0/26"
            ],
            "default_outbound_access_enabled": true,
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/PESubnet",
            "name": "PESubnet",
            "network_security_group_id_wo_version": 0,
            "private_endpoint_network_policies": "Disabled",
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "Test-rg",
            "route_table_id_wo_version": 0,
            "virtual_network_name": "Test-vnet"
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "PESubnet",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076",
            "virtual_network_name": "Test-vnet"
          },
          "dependencies": [
            "azurerm_resource_group.rg01",
            "azurerm_virtual_network.Vnet01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "Vnet01",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "b6b5ceb1-25c7-41e4-81d3-bfc6e5cfdf6b",
            "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet",
            "location": "centralindia",
            "name": "Test-vnet",
            "private_endpoint_vnet_policies": "Disabled",
            "resource_group_name": "Test-rg",
            "subnet": [
              {
                "address_prefixes": [
                  "10.0.1.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/WebSubnet",
                "name": "WebSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.2.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/AppSubnet",
                "name": "AppSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.3.0/24"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/DBSubnet",
                "name": "DBSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.4.0/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/BastionSubnet",
                "name": "BastionSubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              },
              {
                "address_prefixes": [
                  "10.0.5.0/26"
                ],
                "default_outbound_access_enabled": true,
                "id": "/subscriptions/f6cfd0e6-6d53-4b43-b432-69e591dde076/resourceGroups/Test-rg/providers/Microsoft.Network/virtualNetworks/Test-vnet/subnets/PESubnet",
                "name": "PESubnet",
                "private_endpoint_network_policies": "Disabled",
                "private_link_service_network_policies_enabled": true
              }
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "name": "Test-vnet",
            "resource_group_name": "Test-rg",
            "subscription_id": "f6cfd0e6-6d53-4b43-b432-69e591dde076"
          },
          "dependencies": [
            "azurerm_resource_group.rg01"
          ]
        }
      ]
    }
  ]
}